<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.detail.DetailActivity">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_cover"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="-12dp"
                android:contentDescription="@string/favorite_icon"
                android:src="@drawable/ic_outline_favorite_24"
                app:fabSize="mini"
                app:tint="@color/white"
                app:backgroundTint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="@+id/ivCover"
                app:layout_constraintEnd_toEndOf="@+id/ivCover"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/event_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCover" />

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/event_organizer"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tvEventName"
                app:layout_constraintStart_toStartOf="@+id/tvEventName"
                app:layout_constraintTop_toBottomOf="@+id/tvEventName" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/date_time"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tvOwnerName"
                app:layout_constraintStart_toStartOf="@+id/tvOwnerName"
                app:layout_constraintTop_toBottomOf="@+id/tvOwnerName" />

            <TextView
                android:id="@+id/tvAvailableQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/available_quota"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tvDateTime"
                app:layout_constraintStart_toStartOf="@+id/tvDateTime"
                app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/event_description"
                app:layout_constraintBottom_toTopOf="@+id/btnRegister"
                app:layout_constraintEnd_toEndOf="@+id/tvDateTime"
                app:layout_constraintStart_toStartOf="@+id/tvDateTime"
                app:layout_constraintTop_toBottomOf="@+id/tvAvailableQuota"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_events_available"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
